--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -24,7 +24,13 @@ mybatis.type-aliases-package=com/funnycode/blog/model
 mybatis.configuration.map-underscore-to-camel-case=true
 
 # Redis
-redis.host=redis://47.102.197.248:6379/2
+# redis.host=redis://47.102.197.248:6379/2
+redis.host=47.102.197.248
+redis.port=6379
+redis.timeout=3000
+redis.password=Xzc202327
+redis.database=2
+
 
 # \u90AE\u4EF6
 spring.mail.host=smtp.qq.com
